<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.abhinaybalusu.hw2.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/addExpenseString"
        android:id="@+id/addExpenseButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/editExpenseString"
        android:id="@+id/editExpenseButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height= "60dp"
        android:text="@string/deleteExpenseString"
        android:id="@+id/deleteExpenseButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/showExpensesString"
        android:id="@+id/showExpensesButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/finishString"
        android:id="@+id/finishButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
</LinearLayout>
