<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.abhinaybalusu.hw2.ShowExpense">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/expenseDetailsLabel"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/expenseNameLabel_Show"
            android:id="@+id/expenseNameLabelTextView_Show"
            android:layout_weight="0.20"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/expenseNameValueTextView_Show"
            android:layout_weight="0.50"
            android:layout_marginLeft="30dp"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/categoryLabel"
            android:id="@+id/expenseCategoryLabelTextView_Show"
            android:layout_weight="0.20"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/expenseCategoryValueTextView_Show"
            android:layout_weight="0.50"
            android:layout_marginLeft="30dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/amountLabel"
            android:id="@+id/expenseAmountLabelTextView_Show"
            android:layout_weight="0.20"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/expenseAmountValueTextView_Show"
            android:layout_weight="0.50"
            android:layout_marginLeft="30dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dateLabel"
            android:id="@+id/expenseDateLabelTextView_Show"
            android:layout_weight="0.20"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/expenseDateValueTextView_Show"
            android:layout_weight="0.50"
            android:layout_marginLeft="30dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/receiptLabel"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/receiptImageView_Show"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/receipt"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/showFirstExpenseIV"
            android:src="@drawable/fastbackward"
            android:layout_marginRight="4dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/showPreviousExpenseIV"
            android:src="@drawable/backward" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishString"
            android:id="@+id/finishButton_Show"
            android:layout_weight="1.08" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/showNextExpense"
            android:src="@drawable/farward"
            android:layout_marginRight="4dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/showLastExpense"
            android:src="@drawable/fastfarward" />
    </LinearLayout>
</LinearLayout>
